Add css, Update html files and Add server to allowed hosts

--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -2,23 +2,25 @@
 
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="{% static 'main/css/style.css' %}" />
     <title>{% block title %}Reddit Clone{% endblock %}</title>
-</head>
-<body>
+  </head>
+
+  <body>
     <header>
-        
+      <h1>Reddit Clone</h1>
     </header>
 
-    <main>
-        {% block content %}{% endblock %}
-    </main>
+    <div class="navigation">
+      <a href="{% url 'home' %}">Home</a>
+    </div>
 
-    <footer>
-        
-    </footer>
-</body>
+    <main>{% block content %}{% endblock %}</main>
+
+    <footer></footer>
+  </body>
 </html>
