--- a/main/templates/post_detail.html
+++ b/main/templates/post_detail.html
@@ -1,4 +1,5 @@
-<!-- templates/post_detail.html -->
+<!-- main/templates/post_detail.html -->
+{% extends 'base.html' %}
 
 <h2>{{ post.title }}</h2>
 <p>{{ post.content }}</p>
