Update moved files in to folder

--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -1,5 +1,5 @@
 <!-- templates/home.html -->
-{% extends 'base.html' %} {% for post in posts %}
+{% extends 'base.html' %} {% block content %} {% for post in posts %}
 <div>
   <h2><a href="{% url 'post_detail' post.id %}">{{ post.title }}</a></h2>
   <p>{{ post.content }}</p>
@@ -7,4 +7,4 @@
   <p>Posted by: {{ post.author.username }} | {{ post.created_at }}</p>
   <p>Upvotes: {{ post.upvotes }} | Downvotes: {{ post.downvotes }}</p>
 </div>
-{% endfor %}
+{% endfor %} {% endblock %}
