--- a/main/templates/main/post_detail.html
+++ b/main/templates/main/post_detail.html
@@ -12,4 +12,4 @@
   {{ comment.author.username }} - {{ comment.created_at }}: {{ comment.content
   }}
 </p>
-{% endfor %}
+{% endfor %} {% endblock %}
