--- a/main/templates/main/create_post.html
+++ b/main/templates/main/create_post.html
@@ -1,6 +1,6 @@
 <!-- main/templates/main/create_post.html -->
 
-{% extends 'base.html' %} {% block content %}
+{% extends 'main/base.html' %} {% block content %}
 <h2>Create a New Post</h2>
 <form method="post" action="{% url 'create_post' %}">
   {% csrf_token %} {{ form.as_p }}
