--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -1,5 +1,5 @@
 <!-- templates/home.html -->
-{% extends 'base.html' %} {% block content %} {% for post in posts %}
+{% extends 'main/base.html' %} {% block content %} {% for post in posts %}
 <div>
   <h2><a href="{% url 'post_detail' post.id %}">{{ post.title }}</a></h2>
   <p>{{ post.content }}</p>
