--- a/main/templates/main/post_detail.html
+++ b/main/templates/main/post_detail.html
@@ -1,5 +1,5 @@
 <!-- main/templates/post_detail.html -->
-{% extends 'base.html' %}
+{% extends 'main/base.html' %}
 
 <h2>{{ post.title }}</h2>
 <p>{{ post.content }}</p>
