--- a/main/templates/main/post_detail.html
+++ b/main/templates/main/post_detail.html
@@ -1,15 +1,10 @@
-<!-- main/templates/post_detail.html -->
-{% extends 'main/base.html' %}
-
-<h2>{{ post.title }}</h2>
-<p>{{ post.content }}</p>
-<p>Category: {{ post.category.name }}</p>
-<p>Posted by: {{ post.author.username }} | {{ post.created_at }}</p>
-<p>Upvotes: {{ post.upvotes }} | Downvotes: {{ post.downvotes }}</p>
-
-{% for comment in post.comment_set.all %}
-<p>
-  {{ comment.author.username }} - {{ comment.created_at }}: {{ comment.content
-  }}
-</p>
-{% endfor %} {% endblock %}
+<!-- main/templates/main/post_detail.html -->
+{% extends 'main/base.html' %} {% block content %}
+<div>
+  <h2>{{ post.title }}</h2>
+  <p>{{ post.content }}</p>
+  <p>Category: {{ post.category.name }}</p>
+  <p>Posted by: {{ post.author.username }} | {{ post.created_at }}</p>
+  <p>Upvotes: {{ post.upvotes }} | Downvotes: {{ post.downvotes }}</p>
+</div>
+{% endblock %}
